app/assets/stylesheets/distributor/_settings.css.sass
.settings-forms
  margin: 2.5% 8% 2.5% 5%
  section
    header
      margin-bottom: 6%
  .form-horizontal
    .control-label
      width: 220px
    .controls
      margin-left: 240px
    .btn
      margin-bottom: 25px

//----- Organisation

#webstore-information
  .image-upload
    margin-bottom: 20px

//----- Stock List
#stock-list-controls
  margin-bottom: 1em

#stock-list-mass-edit
  background-color: $action-colour
  +border-radius(5px)
  margin-bottom: 1em
  padding: 1em 2em
  h3, textarea
    margin: 0px

#bulk-update
  .control-group
    margin: 0px
    input[type='text']
      width: 102%
      margin: 0px
  .remove
    margin-top: 2px
    padding: 0px
    font-size: 20px
    font-weight: bold
    line-height: 20px
    color: black
    text-shadow: 0 1px 0 white
    opacity: 0.2
    filter: alpha(opacity=20)
    cursor: pointer
    background: transparent
    border: 0px
    &:hover
      color: black
      text-decoration: none
      cursor: pointer
      opacity: 0.4
      filter: alpha(opacity=40)
  .label-warning
    display: none
    line-height: 28px
  .badge
    line-height: 28px

#customer_spend_limit
  .control-label
    width: 250px
  .controls
    margin-left: 290px

#distributor_spend_limit_on_all_customers
  margin-bottom: 6px

#organisation, #payments
  textarea
    resize: vertical
  input:not(.btn), textarea, select
    +box-sizing(border-box)
    margin-bottom: 4px
    &.span6:last-child
      float: right
  input:not(.btn)
    height: 30px

#organisation
  .address input
    +border-radius(4px)
    &:first-child:not(:only-child)
      +border-radius(4px 0 0 4px)
      &:not(:focus)
        border-right-color: transparent
    &:last-child:not(:only-child)
      +border-radius(0 4px 4px 0)
      &:not(:focus)
        border-left-color: transparent

  .country
    margin: 5px 9px
  .time_zone
    width: 50%

  #balance_threshold
    padding-left: 20px
    .input-append
      margin: 10px 0

#payments
  .preview
    p
      margin-top: 10px

